feat: add handlebars

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/sshaannnn/Farms#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^3.0.0",
     "nodemon": "^2.0.15"
   }
 }
